src/test/ui/consts/unstable-const-fn-in-libcore.stderr
error[E0493]: destructors cannot be evaluated at compile-time
  --> $DIR/unstable-const-fn-in-libcore.rs:17:60
   |
LL |     const fn unwrap_or_else<F: ~const FnOnce() -> T>(self, f: F) -> T {
   |                                                            ^ constant functions cannot evaluate destructors
...
LL |     }
   |     - value is dropped here

error[E0493]: destructors cannot be evaluated at compile-time
  --> $DIR/unstable-const-fn-in-libcore.rs:17:54
   |
LL |     const fn unwrap_or_else<F: ~const FnOnce() -> T>(self, f: F) -> T {
   |                                                      ^^^^ constant functions cannot evaluate destructors
...
LL |     }
   |     - value is dropped here

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0493`.
